# hw3-qjiang0910

./: Makefile  README.md  ai_documentation.txt  myst.yml  pyproject.toml
ligotools/: utils.py
ligotools/tests/: test_readligo.py  test_utils.py
